// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabsView renders RTL styling 1`] = `
<div
  className="c-tab is-rtl "
/>
`;

exports[`TabsView renders default styling 1`] = `
<div
  className="c-tab "
/>
`;

exports[`TabsView renders vertical styling 1`] = `
<div
  className="c-tab c-tab--block "
/>
`;
